--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 mlruns/*/artifacts/VGG16_Dynamique/data/model.keras
 mlruns/*/artifacts/VGG16_Dynamique/data/model.keras
 mlruns/
+data/
+chest_xray/
