Ajout des exclusions dans .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ mlruns/*/artifacts/VGG16_Dynamique/data/model.keras
 mlruns/*/artifacts/VGG16_Dynamique/data/model.keras
 mlruns/
 data/
+chest_xray/mlruns/
 chest_xray/
